Finished UI version 1.0

--- a/index.html
+++ b/index.html
@@ -3,9 +3,23 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="styles.css" />
     <title>Rock Paper Scissors</title>
   </head>
   <body>
+    <div class="wrapper">
+      <button class="rock-button button">🪨</button>
+      <button class="paper-button button">📝</button>
+      <button class="scissors-button button">✂️</button>
+      <button class="replay-button">Replay</button>
+    </div>
+    <div class="results"></div>
+    <div class="score wrapper">
+      Computer score:
+      <p class="computer-score">0</p>
+      User score:
+      <p class="user-score">0</p>
+    </div>
     <script src="script.js"></script>
   </body>
 </html>
